<resources>
    <string name="app_name">GloryRoad</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Имя</string>
    <string name="middle_name">Отчество</string>
    <string name="last_name">Фамилия</string>
    <string name="birth_date">Дата рождения</string>
    <string name="search">Поиск</string>
    <string name="fighter_photo">Фото бойца</string>
    <string name="colorize">Колоризовать</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="load_photo">Загрузить</string>
</resources>
