<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PhotoFragment">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/fighter_photo"
        android:scaleType="center"
        android:visibility="visible"
        app:srcCompat="@drawable/fighter"
        tools:src="@drawable/fighter" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/ivPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#008000"
        android:text="@string/load_photo"
        app:backgroundTint="#008000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnColorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/btnLoad"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="1dp"
        android:background="#008000"
        android:text="@string/colorize"
        app:backgroundTint="#008000" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back"
        app:icon="@drawable/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:iconPadding="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/next"
        android:textSize="14sp"
        app:icon="@drawable/next"
        app:iconGravity="end"
        app:iconPadding="1dp" />

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:progressDrawable="@drawable/loading"
        android:visibility="gone"/>
</RelativeLayout>